--- a/src/app/pages/restaurar/restaurar.page.html
+++ b/src/app/pages/restaurar/restaurar.page.html
@@ -8,13 +8,41 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title>Restaurar</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <p>llenar</p>
-  </div>
+  <ion-content [fullscreen]="true">
+    <form action="" #formulario>
+      <ion-row>
+        <ion-col>
+          <ion-item id="rounded">
+            <ion-label floating>Usuario:</ion-label>
+            <ion-input type="text" required name="usuario" ngModel></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+  
+      <ion-row>
+        <ion-col>
+          <ion-item id="rounded">
+            <ion-label floating>Password:</ion-label>
+            <ion-input type="password" required name="password" ngModel></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+  
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-button shape="block">Restablecer</ion-button>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+  
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-button color="secondary" shape="block" [routerLink]="['/login']">Volver al login</ion-button>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </form>
+  </ion-content>
 </ion-content>
