--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -11,10 +11,11 @@
 
 
   <div id="container">
+    <img src="../../../assets/images/logos/autodos.jpg" id="img-logo-login"  width="350" height="200" />
     <ion-row>
       <ion-col>
         <ion-item>
-          <ion-button shape="block" [routerLink]="['/choferes']">Ver choferes disponibles</ion-button>
+          <ion-button color="dark" shape="block" [routerLink]="['/choferes']">Ver choferes disponibles</ion-button>
         </ion-item>
       </ion-col>
     </ion-row>
